--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,29 @@
-html,
+:root {
+  --grey-50: #F7F7F7;
+  --grey-500: #2B2B2B;
+  --blue-50: #F0F3FE;
+  --blue-200: #90A5F9;
+  --blue-500: #041452;
+  --red-300: #E64C3B;
+  --green-300: #2B822E;
+  --yellow-300: #FFCA32;
+  --yellow-500: #804A00;
+  --orange: #E57C00;
+  --white: #FFFFFF;
+}
+
+html {
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
+}
+
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', sans-serif;
+  color: var(--grey-500);
 }
 
 a {
@@ -13,4 +33,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1, h2, h3, h4, p {
+  margin: 0;
+  padding: 0;
 }
